--- a/src/component/styles.scss
+++ b/src/component/styles.scss
@@ -1,36 +1,3 @@
-*,
-*:after,
-*:before {
-  margin: 0;
-  padding: 0;
-}
-img {
-  width: 100%;
-}
-:root {
-  --bg: hsl(0, 0%, 98%);
-  --bg-offset: hsl(0, 0%, 100%);
-  --text: hsl(200, 15%, 8%);
-  --gray: hsl(0, 0%, 52%);
-  --border: rgba(0, 0, 0, 0.1);
-}
-ul,
-ol {
-  list-style: none;
-}
-body {
-  background: var(--bg);
-  font-family: sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 14px;
-}
-
-.wrapper {
-  width: 96%;
-  max-width: 1140px;
-  margin: 0 auto;
-}
 .card-grid {
   margin: 2em 0;
   display: grid;
@@ -82,6 +49,85 @@ body {
   li {
     color: var(--text);
     margin-top: 8px;
+
+    span {
+      color: var(--gray);
+    }
+  }
+}
+
+/* card view */
+article {
+  .article-main {
+    margin-top: 2em;
+  }
+}
+@media (min-width: 600px) {
+  article {
+    display: grid;
+    grid-gap: 10%;
+    grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
+
+    .article-main {
+      margin-top: 0em;
+    }
+  }
+}
+@media (max-width: 375px) {
+  .article-main {
+    h3 {
+      margin-top: 2em;
+    }
+
+    .flex {
+      flex-wrap: wrap;
+
+      .last-row {
+        margin-top: 2em;
+      }
+    }
+  }
+  .article-end {
+    flex-direction: row;
+  }
+}
+.article-flag {
+  max-width: 350px;
+
+  img {
+    box-shadow: 0px 2px 4px var(--border);
+  }
+}
+.article-main {
+  max-width: 390px;
+
+  h3 {
+    margin-bottom: 1em;
+    font-size: 22px;
+    font-weight: bolder;
+  }
+}
+.article-end {
+  margin: 2em 0;
+  flex-wrap: wrap;
+
+  h4 {
+    display: inline-block;
+  }
+
+  a {
+    display: inline-block;
+    margin: 2px;
+    background-color: var(--bg-offset);
+    padding: 0.4em 0.8em;
+    border: 1px solid var(--border);
+    font-size: 14px;
+  }
+}
+.items {
+  li {
+    color: var(--text);
+    margin-top: 0.9em;
 
     span {
       color: var(--gray);
